fixed spacing

--- a/project3/styles.css
+++ b/project3/styles.css
@@ -37,9 +37,11 @@ h1 {
     color: black;
     display: block;
     font-family: 'Teko', sans-serif;
+    line-height: 45px;
     text-transform: uppercase;
     text-align: center;
     margin: auto;
+    margin-bottom: 15px;
     width: 60%;
 }
 
@@ -66,12 +68,17 @@ h2 {
 
 h3 {
     color: var(--color-blue);
+    font-size: 24px;
+    position: relative;
     text-align: center;
+    top: 50px;
+    max-width: 60%;
+    margin: auto;
 }
 
-h3,
 h4 {
     font-size: 16px;
+    margin: 0;
 }
 
 label {
@@ -147,6 +154,13 @@ input[type="checkbox"]:checked.selected-decoration {
 }
 */
 
+input[type="text"],
+input[type="email"],
+input[type="number"] {
+    margin-bottom: 25px;
+}
+
+
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus {
@@ -193,8 +207,10 @@ input[type="number"]:not(:placeholder-shown):invalid {
     margin: auto;
     width: 200px;
     padding: 0;
+    position: relative;
     text-align: center;
     text-transform: uppercase;
+    top: 50px;
 }
 
 .button-reset:hover {
@@ -218,15 +234,24 @@ input[type="number"]:not(:placeholder-shown):invalid {
 }
 
 .box {
+    border-bottom: 80px solid var(--color-offblack);
     background-color: var(--color-offblack);
-    padding: 25px;
+    height: fit-content;
+    padding-left: 25px;
+    padding-right: 25px;
+    position: relative;
     margin: auto;
     min-width: 350px;
+    top: 80px;
     width: 60%;
 }
 
 .boxes {
     margin: auto;
+}
+
+.catagory {
+    margin-right: 30px;
 }
 
 .catagory,
@@ -237,9 +262,10 @@ input[type="number"]:not(:placeholder-shown):invalid {
 }
 
 .confirm-box {
+    border-top: 4px solid var(--color-blue);
+    padding-top: 30px;
     position: relative;
     margin: auto;
-    border-top: 4px solid var(--color-blue);
     max-width: 500px;
 }
 
@@ -275,6 +301,13 @@ input[type="number"]:not(:placeholder-shown):invalid {
 .shield {
     display: block;
     margin: auto;
+    margin-bottom: 20px;
+}
+
+.shield,
+h1 {
+    position: relative;
+    top: 50px
 }
 
 .strengh,
@@ -302,10 +335,14 @@ input[type="number"]:not(:placeholder-shown):invalid {
 
 .split {
     background-color: var(--color-grey);
-    height: 500px;
+    height: 550px;
     width: inherit;
     position: relative;
     z-index: -1;
 }
 
 /*  ================== CUSTOM STYLES ================== */
+
+#confirm {
+    padding-left: 20px;
+}
